# websockets-demo

./: .gitignore  README.md  client.py  pyproject.toml  server.py
src/: client.py  common.py  server.py
