[project]
    authors         = [{ name = "Lucas Parzianello" }]
    dependencies    = ["loguru>=0.7.2", "loremipsum>=1.0.5", "rich>=14.1.0", "setuptools>=74.1.2", "websockets>=13.0.1"]
    description     = "Demos of websockets"
    name            = "websockets-demo"
    requires-python = ">=3.13"
    version         = "0.1.0"

[tool.uv]
    package = false
